# laser-init-mirror

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  doc_plan.md  docstrings.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/cli/: index.html
api/config/: index.html
api/extractors/gadm/: index.html
api/extractors/geoboundaries/: index.html
api/extractors/unocha/: index.html
api/extractors/unwpp/: index.html
api/extractors/worldpop/: index.html
api/logger/: index.html
api/models/plot/: index.html
api/models/seir/: index.html
api/models/si/: index.html
api/models/sir/: index.html
api/transformers/gadm/: index.html
api/transformers/geoboundaries/: index.html
api/transformers/unocha/: index.html
api/transformers/unwpp/: index.html
api/utils/: index.html
architecture/: index.html
configuration/: index.html
contributing/: index.html
datasources/: index.html
docs/: architecture.md  configuration.md  contributing.md  datasources.md  examples-plan.md  index.html  index.md  installation.md  models.md  quickstart.md  troubleshooting.md  userguide.md
docs/api/: cli.md  config.md  logger.md  utils.md
docs/api/extractors/: gadm.md  geoboundaries.md  unocha.md  unwpp.md  worldpop.md
docs/api/models/: plot.md  seir.md  si.md  sir.md
installation/: index.html
models/: index.html
quickstart/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/architecture/: index.html
site/configuration/: index.html
site/contributing/: index.html
site/datasources/: index.html
site/examples-plan/: index.html
site/models/: index.html
site/search/: search_index.json
site/userguide/: index.html
src/laser/init/: cli.py  (+10 more)
tests/: test_anthropic_query.py  test_cli.py  test_config.py  test_gadm_extractor.py  test_geoboundaries_extractor.py  test_openai_query.py  test_utils.py
troubleshooting/: index.html
userguide/: index.html
(+23 files in other folders)
