[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/laser"]

[tool.uv]
package = true

[tool.uv.sources]
rastertoolkit = { git = "https://github.com/institutefordiseasemodeling/rastertoolkit", rev = "v0.4.9" }

[project]
name = "laser-init"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.84.0",
    "click>=8.3.1",
    "geopandas>=1.1.2",
    "laser-generic>=1.0.1",
    "matplotlib>=3.10.8",
    "openai>=2.24.0",
    "pandas>=2.3.3",
    "pycountry>=26.2.16",
    "pyogrio>=0.12.1",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "rastertoolkit",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]

[project.scripts]
laser-init = "laser.init.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []
fixable = ["ALL"]
unfixable = []
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "dist",
    "build",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=laser.init --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests as requiring network access",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
